# gRPC_Test

./: .gitignore  CMakeLists.txt  Main.cc  Task.txt
.devcontainer/: Dockerfile  devcontainer.json
CMake/: GenerateProtobuf.cmake
Include/Models/: Client.hpp  Invoice.hpp  InvoiceDetails.hpp  Product.hpp
Include/Repositories/: ClientRepository.cc  ClientRepository.hpp  Database.cc  Database.hpp  InvoiceDetailsRepository.cc  InvoiceDetailsRepository.hpp  InvoiceRepository.cc  InvoiceRepository.hpp  Iterator.hpp  ProductRepository.cc  ProductRepository.hpp
Include/Services/: ClientService.cc  ClientService.hpp  InvoiceService.cc  InvoiceService.hpp  ProductService.cc  ProductService.hpp
Protos/Helpers/: ServiceStatus.proto
Protos/Models/: Client.proto  Invoice.proto  InvoiceDetails.proto  Product.proto
Protos/Protobuf/Helpers/: ServiceStatus.grpc.pb.cc  ServiceStatus.grpc.pb.h  ServiceStatus.pb.cc  ServiceStatus.pb.h  ServiceStatus_mock.grpc.pb.h
Protos/Protobuf/Models/: Client.grpc.pb.cc  Client.grpc.pb.h  Client.pb.cc  Client.pb.h  Client_mock.grpc.pb.h  Invoice.grpc.pb.cc  Invoice.grpc.pb.h  Invoice.pb.cc  Invoice.pb.h  InvoiceDetails.grpc.pb.cc  InvoiceDetails.grpc.pb.h  InvoiceDetails.pb.cc  InvoiceDetails.pb.h  InvoiceDetails_mock.grpc.pb.h  Invoice_mock.grpc.pb.h  Product.grpc.pb.cc  Product.grpc.pb.h  Product.pb.cc  Product.pb.h  Product_mock.grpc.pb.h
Protos/Protobuf/Services/: ClientService.grpc.pb.cc  ClientService.grpc.pb.h  ClientService.pb.cc  ClientService.pb.h  ClientService_mock.grpc.pb.h  InvoiceService.grpc.pb.cc  InvoiceService.grpc.pb.h  InvoiceService.pb.cc  InvoiceService.pb.h  InvoiceService_mock.grpc.pb.h  ProductService.grpc.pb.cc  ProductService.grpc.pb.h  ProductService.pb.cc  ProductService.pb.h  ProductService_mock.grpc.pb.h
Protos/Services/: ClientService.proto  InvoiceService.proto  ProductService.proto
